[package]
name = "forward-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
pingora = { version = "0.5.0", features = ["proxy"]}#"0.5.0"
pingora-proxy = "0.5.0"
reqwest = "0.12.18"
serde = { version = "1.0.219", features = ["derive"] } #"1.0.219"
serde_yaml = "0.9.34"
socks5-proxy = "0.1.1"
tokio = { version = "1.45.1", features = ["full"] } #"1.45.1"
