[package]
name = "forward-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
clap = "4.5.39"
env_logger = "0.11.8"
log = "0.4.27"
pingora = { version = "0.5.0", features = ["proxy"]}#"0.5.0"
pingora-core = "0.5.0"
pingora-http = "0.5.0"
pingora-proxy = "0.5.0"
reqwest = "0.12.18"
serde = { version = "1.0.219", features = ["derive"] } #"1.0.219"
serde_yaml = "0.9.34"
socks5-proxy = "0.1.1"
tokio = { version = "1.45.1", features = ["full"] } #"1.45.1"
tokio-socks = "0.5.2"
